# events

./: README.md  view_compag.json  view_monde_prec.json  view_recap_covid.json
CustomTkinter/: README.md
CustomTkinter/apps/TodoApp/: app.py  package.json  pyproject.toml
CustomTkinter/apps/TodoApp/components/: addTaskForm.py
CustomTkinter/apps/TodoApp/config/: settings.py
CustomTkinter/apps/TodoApp/services/: taskService.py
CustomTkinter/apps/TodoApp/utils/: types.py
CustomTkinter/demo-base-app/: app.py  db.json
CustomTkinter/demo-base-app/components/: checkbox.py  input.py
CustomTkinter/demo-base-app/utils/: __init__.py
CustomTkinter/demo-final-app/: app.py  pyproject.toml
CustomTkinter/demo-final-app/components/: taskCounter.py  taskItems.py
CustomTkinter/examples/: button.py  input.py  main.py  option_menu.py  progressbar.py  pyproject.toml  slider.py  switch.py  tabview.py  textbox.py
CustomTkinter/slidev/: package.json  pnpm-lock.yaml  slides.md
DataSourceManagementPBI/: README.md
DataSourceManagementPBI/data/: Recap.csv  StatisticsByCompany.csv  StatisticsByCountry.csv  products.csv
