[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Macktireh <abdimack97@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.2"
customtkinter = "^5.2.2"
pillow = "^10.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
